# simple_paint

./: CMakeLists.txt  README.md  driver.cpp  main.cpp  run.sh
include/: foo.h
src/: foo.c
